installed default shadcn carousel and added default styles to globals

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,23 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+body {
+  margin: 0;
+  width: 100%;
+  position: relative;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+* {
+  margin: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
