added fade to carousel sides; started implementing adaptive for mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,6 +66,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -89,4 +90,16 @@ html {
 *::before,
 *::after {
   box-sizing: border-box;
+}
+
+.carousel-content-fade {
+  /* background-color: red; */
+  overflow: hidden;
+  -webkit-mask-image: linear-gradient(
+    to right,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1) 10%,
+    rgba(0, 0, 0, 1) 90%,
+    rgba(0, 0, 0, 0)
+  );
 }
